test_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp-failed
spec:
  selector:
    matchLabels:
      app: testapp-failed
  template:
    metadata:
      labels:
        app: testapp-failed
    spec:
      containers:
      - name: testapp
        image: nginx:alpine
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp
spec:
  selector:
    matchLabels:
      app: testapp
  template:
    metadata:
      labels:
        app: testapp
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: testapp
        image: nginx:alpine
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
